@@ -242,8 +242,8 @@ var Util, exports;
      * @param pArg
      */
     Util.retExec                = function(pCallBack, pArg){
-        return function(){
-            Util.exec(pCallBack, pArg);
+        return function(pArgument){
+            Util.exec(pCallBack, pArg || pArgument);
         };
     };
    
